%% title: Security Scanner — perzistentní ICT incidenty a in-memory výsledky skenů
%% V6 ukládá každý přechod incidentu atomicky s outbox eventem a striktní revizí.
%% SecurityScanResult a PlatformSecurityReport zůstávají pouze v paměti.
erDiagram

    IctIncident {
        UUID id PK
        STRING status
        STRING severity
        STRING affectedServices
        LONG aggregateRevision
        INSTANT updatedAt
    }

    IctIncidentOutbox {
        LONG id PK
        UUID eventId UK
        UUID aggregateId FK
        LONG aggregateRevision UK
        STRING eventType
        STRING status
        INSTANT claimedAt
    }

    IctIncident ||--o{ IctIncidentOutbox : "atomický přechod"

    SecurityScanResult {
        UUID id PK "in-memory / report context"
        STRING serviceName
        STRING serviceUrl
        INSTANT scannedAt
        LONG durationMs
        BOOLEAN reachable
        INT score "0–100"
        STRING grade "A+ A B C D F"
        STRING tlsVersion "nullable"
        BOOLEAN openApiAvailable
        BOOLEAN healthEndpointSecured
    }

    SecurityFinding {
        STRING id PK "napr. MISSING_HEADER_CSP"
        ENUM category "OwaspCategory A01–A10"
        ENUM severity "CRITICAL HIGH MEDIUM LOW INFO"
        STRING title
        STRING description
        STRING remediation
        STRING cweId "nullable"
        DOUBLE cvssScore "nullable"
        STRING endpoint "nullable"
        STRING evidence "nullable"
    }

    PlatformSecurityReport {
        STRING reportId PK "UUID string"
        INSTANT generatedAt
        INT totalServices
        INT reachableServices
        INT platformScore "0–100"
        STRING platformGrade "A+ … F"
        INT criticalFindings
        INT highFindings
        MAP owaspCoverage "OwaspCategory → count"
        MAP complianceStatus "PSD2_SCA EBA_ICT_RISK GDPR OWASP_TOP10 CNB_SECURITY"
    }

    PlatformSecurityReport ||--o{ SecurityScanResult : "serviceResults"
    SecurityScanResult ||--o{ SecurityFinding : "findings"
